name changes from ch3 to mod

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,13 @@ export(classify_mod_reads)
 export(collapse_mod_windows)
 export(export_mod_table)
 export(filter_mod_table)
-export(get_ch3_stats)
 export(get_mod_cols)
 export(get_mod_cpg_count)
 export(get_mod_dbinfo)
+export(get_mod_stats)
 export(get_mod_table)
 export(get_mod_tableinfo)
-export(make_ch3_archive)
+export(make_mod_archive)
 export(make_mod_db)
 export(plot_mod_cov)
 export(plot_mod_diff)
